--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -5,7 +5,7 @@
         <img src="assets/img/startScreen.jpg">  
         <div class="startField">
             <h1>Ring of Fire</h1>
-            <button>START GAME</button>
+            <button (click)="newGame()" >START GAME</button>
         </div>
     
     </div>
