--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,3 +1,6 @@
+<app-player *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px' : 100 + (i * 130)}" 
+[name]="players" class="player-position"></app-player>
+
 <div class="game-field">
 
     <div class="card-stack">
@@ -5,7 +8,13 @@
     <img [ngStyle]="{'right.px' : i * 4}" *ngFor="let c of [0,1,2,3,5]; let i = index;" 
     src="assets/img/cards/card_cover.png">
     <img (click)="pickCard()" class="top-card" style="right: 25px" src="assets/img/cards/card_cover.png">
-    <img (click)="pickCard()" *ngIf="pickCardAnimation" [class.pick-card]="pickCardAnimation" class="pick-card" style="right: 25px" src="assets/img/cards/clubs_1.png">
+    
+    <!--playing card stack-->
+    <img *ngFor= "let card of game.playedCards" class="playedCards" src="assets/img/cards/{{ card }}.png">
+    
+    <!--animated current card-->
+    <img (click)="pickCard()" *ngIf="pickCardAnimation" [class.pick-card]="pickCardAnimation" class="pick-card" style="right: 25px" src="assets/img/cards/{{ currentCard }}.png">
+    
 </div>
 
 </div>
