--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -4,6 +4,7 @@
     height: 100vh;
     max-width: 100%;
     background-image: url('/assets/img/background.jpg');
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,6 +31,12 @@
 
         transform: scale(1.1) translateY(-10px);
     }
+}
+
+.playedCards{
+    
+    right: 25px;
+    transform: scale(1) translateX(200px) translateY(-150px) rotate(-30deg);
 }
 
 .pick-card {
@@ -62,4 +69,11 @@
 
 
     }
+}
+
+.player-position {
+
+    position: absolute;
+    right: 0;
+
 }
