--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,5 @@
-<app-player *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px' : 100 + (i * 130)}" 
-[name]="players" class="player-position"></app-player>
+<app-player *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px' : 30 + (i * 130)}" 
+ class="player-position" [name] = "player"></app-player>
 
 <div class="game-field">
 
@@ -18,3 +18,5 @@
 </div>
 
 </div>
+
+
