--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -18,7 +18,7 @@
 </div>
 
 </div>
-
+<!--button field materirial design-->
 <button mat-fab color="primary" (click)="openDialog()" class="add-btn">
     <mat-icon>add</mat-icon>
   </button>
