show the active player

--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,5 +1,5 @@
 <!--Player Icon-->
-<div class="player-field">
+<div class="player-field" [class.playerActive]="playerActive">
 
     <img src="assets/img/profil.png">
     <span>{{ name }}</span>
