--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,4 +1,5 @@
 <app-player *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px' : 30 + (i * 130)}" 
+[playerActive] ="i == game.currentPlayer"
  class="player-position" [name] = "player"></app-player>
 
 <div class="game-field">
