playing rules Json

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -67,7 +67,7 @@
 
         transform: scale(1) translateX(200px) translateY(-150px) rotate(-30deg);
 
-
+        
     }
 }
 
@@ -84,3 +84,13 @@
     right: 32px;
     bottom: 32px;
 }
+
+.pin-bottom{
+
+    position: absolute;
+    bottom:  32px;
+    left: 100px;
+    right: 100px;
+    
+}
+
