--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -19,6 +19,8 @@
 </div>
 
 </div>
+
+<app-game-rules [card]="currentCard" class="pin-bottom" ></app-game-rules>
 <!--button field materirial design-->
 <button mat-fab color="primary" (click)="openDialog()" class="add-btn">
     <mat-icon>add</mat-icon>
