--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -4,8 +4,8 @@
         
         <img src="assets/img/startScreen.jpg">  
         <div class="startField">
-            <h1>Ring of Fire</h1>
-            <button (click)="newGame()" >START GAME</button>
+            <div class="game-title"><h1>Ring of Fire</h1></div>
+            <div class="game-btn"><button (click)="newGame()" >START GAME</button></div>
         </div>
     
     </div>
