--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -29,6 +29,7 @@
     color: white;
     font-family: sans-serif;
     font-size:70px;
+    padding-bottom: 50px;
 }
 
 .startScreen button {
@@ -38,7 +39,7 @@
     font-family: sans-serif;
     font-size: 20px;
     border-radius: 5px;
-    background-color: rgba(0,0,0,0.5);
+    background-color: lightsalmon;
     color: white;
     border: 1px solid white;
     cursor: pointer;
@@ -52,3 +53,30 @@
     background-color:lightcoral;
 }
 
+@media (max-width: 800px) {
+
+
+    .startScreen img {
+
+        width: 100vh;
+        object-fit: cover;
+    }
+
+
+    .startField h1 {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        padding-top: 200px;
+        text-align: center;
+    }
+
+    .game-btn {
+
+        padding-top: 100px;
+        padding-right: 100px;
+    
+    }
+    
+}
