--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -3,8 +3,7 @@
     width: 100vw;
     height: 100vh;
     max-width: 100%;
-    background-image: url('/assets/img/background.jpg');
-    background-size: cover;
+    background-color: rgb(90, 88, 88);
     display: flex;
     justify-content: center;
     align-items: center;
