--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -32,4 +32,18 @@
 
 }
 
+@media (max-width: 800px) {
+
+    .player-field {
+
+        width: 190px;
+        height: 40px;
+
+    }
+
+    
+
+
+
+}
 
