--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -95,38 +95,32 @@
 
 @media (max-width: 800px) {
     
-    .card-stack  {
+    .card-stack img {
 
-        height: 30px;
-        padding-left: 45px;
+        position: absolute;
+        width: 130px;
     }
 
-    .card-stack img{
-
-        width: 120px;
-        padding-right: 50px;
-    }
-
-    .pin-bottom {
+    .pin-bottom{
 
         left: 0;
         right: 0;
         bottom: 0;
-        max-width: 100%;
     }
 
-    .mat-card {
-
-        height: 10px;
-    }
-
-    .add-btn {
+    .add-btn{
 
         position: absolute;
         top: 10px;
         left: 10px;
+
     }
 
-   
-    
+    .playedCards{
+        right: 25px;
+        transform: scale(1) translateX(157px) translateY(-150px) rotate(-30deg);
+
+    }
+
+  
 }
