--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,7 +1,9 @@
 <!--Player Icon-->
+<div class="player-container">
 <div class="player-field" [class.playerActive]="playerActive">
 
-    <img src="assets/img/profil.png">
-    <span>{{ name }}</span>
+    <div class="playerImage"><img src="assets/img/profil.png"></div>
+    <div class="playerName"><span>{{ name }}</span></div>
 
+</div>
 </div>
