--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -6,14 +6,15 @@
     font-size: 20px;
     background-color: lightcoral;
     border-radius: 5px;
+    height: 50px;
 
 
 }
 
 .player-field img {
 
-    width: 80px;
-    height: 80px;
+    width: 70px;
+    height: 70px;
     object-fit: cover;
     border-radius: 100%;
 
@@ -33,3 +34,15 @@
 }
 
 
+@media (max-width: 800px) {
+    
+    .player-field{
+
+        width: 190px;
+
+
+    }
+    
+    
+   
+}
